# life-game

./: CMakeLists.txt  README.md  main.c
src/: game.c  game.h  globals.c  globals.h  render.c  render.h
